--- a/index.html
+++ b/index.html
@@ -1,12 +1,5 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>AR Modell</title>
-  </head>
-  <body>
-    <h1>3D Modell in AR</h1>
-    <a href="https://arvr.google.com/scene-viewer/1.0?file=https://botan0302.github.io/ar-model/MANsths.glb&title=MANsths&mode=ar_preferred">
-      AR anzeigen (nur Android)
-    </a>
-  </body>
+  <head><title>Test</title></head>
+  <body><h1>Testseite für AR</h1></body>
 </html>
