--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
-<html>
-  <head><title>Test</title></head>
-  <body><h1>Testseite für AR</h1></body>
+<html lang="de">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>3D Modell in AR</title>
+  </head>
+  <body>
+    <h1>3D Modell im AR Viewer</h1>
+    <a href="https://arvr.google.com/scene-viewer/1.0?file=https://botan0302.github.io/ar-model/MANsths.glb&title=MANsths&mode=ar_preferred">AR anzeigen (Android)</a>
+  </body>
 </html>
