--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Modell in AR</title>
+    <meta charset="UTF-8" />
+    <title>3D Modell – MANsths</title>
+    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+    <style>
+      body {
+        margin: 0;
+        background-color: #f4f4f4;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+      }
+      model-viewer {
+        width: 90vw;
+        height: 90vh;
+        background: #fff;
+        border-radius: 16px;
+        box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
+      }
+    </style>
   </head>
   <body>
-    <h1>3D Modell im AR Viewer</h1>
-    <a href="https://arvr.google.com/scene-viewer/1.0?file=https://botan0302.github.io/ar-model/MANsths.glb&title=MANsths&mode=ar_preferred">AR anzeigen (Android)</a>
+    <model-viewer
+      src="MANsths.glb"
+      alt="3D-Modell MANsths"
+      ar
+      ar-modes="scene-viewer webxr quick-look"
+      auto-rotate
+      camera-controls
+      shadow-intensity="1"
+      exposure="1"
+      environment-image="neutral">
+    </model-viewer>
   </body>
 </html>
