--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
-    <title>3D Modell – MANsths</title>
+    <title>3D Modell – MANSths</title>
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
     <style>
       body {
@@ -24,8 +24,8 @@
   </head>
   <body>
     <model-viewer
-      src="MANsths.glb"
-      alt="3D-Modell MANsths"
+      src="MANSths.glb"
+      alt="3D-Modell MANSths"
       ar
       ar-modes="scene-viewer webxr quick-look"
       auto-rotate
