--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <model-viewer
-      src="MANSths.glb"
+      src="MANSths.glb"  <!-- Hier wurde der Dateiname angepasst -->
       alt="3D-Modell MANSths"
       ar
       ar-modes="scene-viewer webxr quick-look"
