--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
       shadow-intensity="1"
       exposure="1"
       environment-image="neutral">
-    </model-viewer>
+    </model-viewer> <!-- Hier muss der schließende Tag vorhanden sein -->
   </body>
 </html>
