--- a/index.html
+++ b/index.html
@@ -14,17 +14,14 @@
         height: 100vh;
       }
       model-viewer {
-        width: 90vw;
-        height: 90vh;
-        background: #fff;
-        border-radius: 16px;
-        box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
+        width: 100vw;
+        height: 100vh;
       }
     </style>
   </head>
   <body>
     <model-viewer
-      src="mansths.glb"  <!-- Hier wurde der Dateiname auf 'mansths.glb' angepasst -->
+      src="https://botan0302.github.io/ar-model/mansths.glb"  <!-- Dein Link zur .glb Datei -->
       alt="3D-Modell mansths"
       ar
       ar-modes="scene-viewer webxr quick-look"
@@ -33,6 +30,6 @@
       shadow-intensity="1"
       exposure="1"
       environment-image="neutral">
-    </model-viewer> <!-- Hier muss der schließende Tag vorhanden sein -->
+    </model-viewer>
   </body>
 </html>
