--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
+<!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>manhaus 3D Modell mit AR</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
     body {
       margin: 0;
-      background-color: #f2f2f2;
-      font-family: sans-serif;
+      background-color: #f5f5f5;
     }
 
     model-viewer {
@@ -17,72 +17,26 @@
     }
 
     #ar-button {
-      background-image: url('https://modelviewer.dev/shared-assets/icons/ic_view_in_ar_new_googblue_48dp.png');
-      background-repeat: no-repeat;
-      background-size: 24px 24px;
-      background-position: 12px center;
-      background-color: #fff;
       position: absolute;
       left: 50%;
+      bottom: 24px;
       transform: translateX(-50%);
-      bottom: 140px;
-      padding: 8px 16px 8px 40px;
-      font-size: 14px;
-      color: #4285f4;
+      background-color: white;
       border: 1px solid #dadce0;
-      border-radius: 20px;
+      border-radius: 24px;
+      padding: 10px 20px 10px 44px;
+      font-size: 16px;
+      color: #4285f4;
+      background-image: url('https://modelviewer.dev/shared-assets/icons/ic_view_in_ar_new_googblue_48dp.png');
+      background-repeat: no-repeat;
+      background-position: 12px center;
+      background-size: 24px 24px;
       cursor: pointer;
-      z-index: 1;
+      z-index: 10;
     }
 
     #ar-button:active {
-      background-color: #e8eaed;
-    }
-
-    #ar-prompt {
-      position: absolute;
-      bottom: 180px;
-      left: 50%;
-      transform: translateX(-50%);
-      display: none;
-      animation: moveHand 2s infinite alternate;
-      z-index: 1;
-    }
-
-    #ar-prompt img {
-      width: 50px;
-      animation: spin 4s linear infinite;
-    }
-
-    @keyframes moveHand {
-      from { transform: translateX(-50%) translateY(0); }
-      to   { transform: translateX(-50%) translateY(-10px); }
-    }
-
-    @keyframes spin {
-      from { transform: rotate(0deg); }
-      to   { transform: rotate(360deg); }
-    }
-
-    #ar-failure {
-      position: absolute;
-      bottom: 180px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(255, 0, 0, 0.8);
-      color: #fff;
-      padding: 8px 16px;
-      border-radius: 4px;
-      display: none;
-      z-index: 1;
-    }
-
-    model-viewer[ar-status="session-started"] #ar-prompt {
-      display: block;
-    }
-
-    model-viewer[ar-tracking="not-tracking"] #ar-failure {
-      display: block;
+      background-color: #e0e0e0;
     }
   </style>
 </head>
@@ -90,20 +44,15 @@
 
 <model-viewer
   src="manhaus.glb"
+  alt="3D-Modell von manhaus"
   ar
   ar-modes="scene-viewer webxr quick-look"
   camera-controls
   auto-rotate
-  alt="manhaus 3D-Modell"
->
-
+  shadow-intensity="1"
+  style="width: 100vw; height: 100vh;">
+  
   <button slot="ar-button" id="ar-button">In deinem Raum ansehen</button>
-
-  <div id="ar-prompt">
-    <img src="https://modelviewer.dev/shared-assets/icons/hand.png" alt="AR-Prompt">
-  </div>
-
-  <div id="ar-failure">AR-Tracking nicht möglich!</div>
 
 </model-viewer>
 
