--- a/index.html
+++ b/index.html
@@ -2,59 +2,18 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>manhaus 3D Modell mit AR</title>
+  <title>Testmodell</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-  <style>
-    body {
-      margin: 0;
-      background-color: #f5f5f5;
-    }
-
-    model-viewer {
-      width: 100vw;
-      height: 100vh;
-      background-color: #e0e0e0;
-    }
-
-    #ar-button {
-      position: absolute;
-      left: 50%;
-      bottom: 24px;
-      transform: translateX(-50%);
-      background-color: white;
-      border: 1px solid #dadce0;
-      border-radius: 24px;
-      padding: 10px 20px 10px 44px;
-      font-size: 16px;
-      color: #4285f4;
-      background-image: url('https://modelviewer.dev/shared-assets/icons/ic_view_in_ar_new_googblue_48dp.png');
-      background-repeat: no-repeat;
-      background-position: 12px center;
-      background-size: 24px 24px;
-      cursor: pointer;
-      z-index: 10;
-    }
-
-    #ar-button:active {
-      background-color: #e0e0e0;
-    }
-  </style>
 </head>
-<body>
-
-<model-viewer
-  src="manhaus.glb"
-  alt="3D-Modell von manhaus"
-  ar
-  ar-modes="scene-viewer webxr quick-look"
-  camera-controls
-  auto-rotate
-  shadow-intensity="1"
-  style="width: 100vw; height: 100vh;">
-  
-  <button slot="ar-button" id="ar-button">In deinem Raum ansehen</button>
-
-</model-viewer>
-
+<body style="margin:0">
+  <model-viewer
+    src="manhaus.glb"
+    alt="3D-Modell Haus"
+    auto-rotate
+    camera-controls
+    ar
+    ar-modes="scene-viewer webxr quick-look"
+    style="width: 100vw; height: 100vh; background-color: #eee;">
+  </model-viewer>
 </body>
 </html>
