--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <style>
     body {
       margin: 0;
+      overflow: hidden; /* Verhindert das Scrollen der Seite */
     }
 
     model-viewer {
@@ -15,28 +16,39 @@
       background-color: #e0e0e0;
     }
 
+    /* Stil für den AR-Button */
     #ar-button {
       position: absolute;
       left: 50%;
-      bottom: 24px;
+      bottom: 40px;
       transform: translateX(-50%);
       background-color: white;
-      border: 1px solid #dadce0;
-      border-radius: 24px;
-      padding: 10px 20px 10px 44px;
-      font-size: 16px;
+      border: 2px solid #4285f4;
+      border-radius: 50px;
+      padding: 15px 30px;
+      font-size: 18px;
+      font-weight: bold;
       color: #4285f4;
       background-image: url('https://modelviewer.dev/shared-assets/icons/ic_view_in_ar_new_googblue_48dp.png');
       background-repeat: no-repeat;
       background-position: 12px center;
-      background-size: 24px 24px;
+      background-size: 28px 28px;
       cursor: pointer;
       z-index: 10;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
     }
 
     #ar-button:active {
       background-color: #e0e0e0;
     }
+
+    #ar-button:focus {
+      outline: none;
+    }
+
   </style>
 </head>
 <body>
@@ -44,19 +56,28 @@
 <model-viewer
   src="manhaus.glb"
   alt="3D-Modell von manhaus"
+  auto-rotate
+  camera-controls
   ar
   ar-modes="scene-viewer webxr quick-look"
-  camera-controls
-  auto-rotate
-  shadow-intensity="1"
   style="width: 100vw; height: 100vh;">
   
+  <!-- AR Button, der in der Mitte erscheint -->
   <button slot="ar-button" id="ar-button">
     In deinem Raum ansehen
   </button>
 
 </model-viewer>
 
+<script>
+  // Funktionalität des AR-Buttons sicherstellen
+  const modelViewer = document.querySelector('model-viewer');
+  const arButton = document.getElementById('ar-button');
+  
+  arButton.addEventListener('click', () => {
+    modelViewer.enterAR();
+  });
+</script>
+
 </body>
 </html>
-
