--- a/index.html
+++ b/index.html
@@ -7,21 +7,26 @@
   <style>
     body {
       margin: 0;
-      overflow: hidden; /* Verhindert das Scrollen der Seite */
+      overflow: hidden;
+      background-color: #f0f0f0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
 
     model-viewer {
-      width: 90vw; /* Modell wird auf 90% der Bildschirmbreite verkleinert */
-      height: 80vh; /* Modell wird auf 80% der Bildschirmhöhe verkleinert */
-      margin: auto;
-      background-color: #e0e0e0;
+      width: 90vw;
+      height: 80vh;
+      background-color: transparent;
+      border-radius: 16px;
+      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.15);
     }
 
-    /* Stil für den AR-Button */
     #ar-button {
       position: absolute;
       left: 50%;
-      bottom: 40px; /* Position etwas nach oben verschoben, damit der Button sichtbar ist */
+      bottom: 40px;
       transform: translateX(-50%);
       background-color: white;
       border: 2px solid #4285f4;
@@ -49,7 +54,6 @@
     #ar-button:focus {
       outline: none;
     }
-
   </style>
 </head>
 <body>
@@ -60,9 +64,18 @@
   auto-rotate
   camera-controls
   ar
-  ar-modes="scene-viewer webxr quick-look">
+  ar-modes="scene-viewer webxr quick-look"
+  environment-image="https://modelviewer.dev/shared-assets/environments/spruit_sunrise_1k_HDR.hdr"
+  shadow-intensity="1"
+  shadow-softness="0.9"
+  exposure="1.2"
+  tone-mapping="neutral"
+  auto-exposure
+  camera-orbit="15deg 75deg 2.5m"
+  field-of-view="30deg"
+  style="--poster-color: transparent;">
   
-  <!-- AR Button, der in der Mitte erscheint -->
+  <!-- AR Button -->
   <button slot="ar-button" id="ar-button">
     In deinem Raum ansehen
   </button>
@@ -70,10 +83,9 @@
 </model-viewer>
 
 <script>
-  // Funktionalität des AR-Buttons sicherstellen
   const modelViewer = document.querySelector('model-viewer');
   const arButton = document.getElementById('ar-button');
-  
+
   arButton.addEventListener('click', () => {
     modelViewer.enterAR();
   });
