--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   camera-controls
   ar
   ar-modes="scene-viewer webxr quick-look"
-  environment-image="https://modelviewer.dev/shared-assets/environments/moon_1k.hdr"
+  environment-image="https://modelviewer.dev/shared-assets/environments/spruit_sunrise_1k.env"
   exposure="1.0"
   shadow-intensity="1"
   shadow-softness="0.8">
@@ -69,7 +69,6 @@
   <button slot="ar-button" id="ar-button">
     In deinem Raum ansehen
   </button>
-
 </model-viewer>
 
 <script>
