--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
     }
 
     model-viewer {
-      width: 90vw;
-      height: 80vh;
-      margin: auto;
+      width: 100vw;
+      height: 100vh;
       display: block;
       background-color: #000;
     }
@@ -62,6 +61,7 @@
   ar
   ar-modes="scene-viewer webxr quick-look"
   environment-image="https://modelviewer.dev/shared-assets/environments/spruit_sunrise_1k.env"
+  skybox-image="https://modelviewer.dev/shared-assets/environments/spruit_sunrise_1k.jpg"
   exposure="1.0"
   shadow-intensity="1"
   shadow-softness="0.8">
