--- a/index.html
+++ b/index.html
@@ -1,17 +1,82 @@
-<model-viewer
-  src="manhaus.glb"
-  alt="3D-Modell von manhaus"
-  auto-rotate
-  camera-controls
-  ar
-  ar-modes="scene-viewer webxr quick-look"
-  environment-image="https://modelviewer.dev/shared-assets/environments/spruit_sunrise_1k.env"
-  skybox-image="https://modelviewer.dev/shared-assets/environments/spruit_sunrise_1k.jpg"
-  exposure="1.0"
-  shadow-intensity="1"
-  shadow-softness="0.8">
-  
-  <button slot="ar-button" id="ar-button">
-    In deinem Raum ansehen
-  </button>
-</model-viewer>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8" />
+  <title>Testmodell mit AR und HDR-Hintergrund</title>
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+  <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+      background-color: black;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    model-viewer {
+      width: 90vw;
+      height: 80vh;
+      background-color: black;
+      border-radius: 8px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.7);
+      display: block;
+    }
+    #ar-button {
+      position: absolute;
+      left: 50%;
+      bottom: 40px;
+      transform: translateX(-50%);
+      background-color: white;
+      border: 2px solid #4285f4;
+      border-radius: 50px;
+      padding: 15px 30px;
+      font-size: 18px;
+      font-weight: bold;
+      color: #4285f4;
+      background-image: url('https://modelviewer.dev/shared-assets/icons/ic_view_in_ar_new_googblue_48dp.png');
+      background-repeat: no-repeat;
+      background-position: 12px center;
+      background-size: 28px 28px;
+      cursor: pointer;
+      z-index: 10;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+    }
+    #ar-button:active {
+      background-color: #e0e0e0;
+    }
+    #ar-button:focus {
+      outline: none;
+    }
+  </style>
+</head>
+<body>
+
+  <model-viewer
+    src="manhaus.glb"
+    alt="3D-Modell von manhaus"
+    auto-rotate
+    camera-controls
+    ar
+    ar-modes="scene-viewer webxr quick-look"
+    environment-image="https://modelviewer.dev/shared-assets/environments/spruit_sunrise_1k.env"
+    skybox-image="https://modelviewer.dev/shared-assets/environments/spruit_sunrise_1k.jpg"
+    exposure="1"
+    shadow-intensity="1"
+    shadow-softness="0.8"
+    background-color="black"
+  >
+    <button slot="ar-button" id="ar-button">In deinem Raum ansehen</button>
+  </model-viewer>
+
+  <script>
+    const modelViewer = document.querySelector('model-viewer');
+    const arButton = document.getElementById('ar-button');
+    arButton.addEventListener('click', () => modelViewer.enterAR());
+  </script>
+
+</body>
+</html>
