--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       background-image: url('https://modelviewer.dev/shared-assets/models/spruit-sunrise/spruit-sunrise-ambient.jpg');
       background-size: cover;
       background-position: center;
+      background-repeat: no-repeat;
+      background-color: transparent !important;
+      display: block;
     }
 
     #ar-button {
@@ -56,8 +59,8 @@
 <body>
 
 <model-viewer
-  src="manhaus.glb"
-  alt="3D-Modell von manhaus"
+  src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
+  alt="3D-Modell Astronaut"
   auto-rotate
   camera-controls
   ar
