--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   <title>Testmodell mit AR</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
-    body {
+    body, html {
       margin: 0;
+      height: 100%;
       overflow: hidden;
     }
 
-    model-viewer {
+    /* Container für Hintergrund und model-viewer */
+    #viewer-container {
       position: relative;
       width: 90vw;
       height: 80vh;
@@ -19,8 +21,15 @@
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-      background-color: transparent !important;
-      display: block;
+    }
+
+    model-viewer {
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      width: 100%;
+      height: 100%;
+      background-color: transparent; /* transparent setzen */
+      z-index: 1;
     }
 
     #ar-button {
@@ -58,19 +67,21 @@
 </head>
 <body>
 
-<model-viewer
-  src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
-  alt="3D-Modell Astronaut"
-  auto-rotate
-  camera-controls
-  ar
-  ar-modes="scene-viewer webxr quick-look"
-  ar-placement="floor"
->
-  <button slot="ar-button" id="ar-button">
-    In deinem Raum ansehen
-  </button>
-</model-viewer>
+<div id="viewer-container">
+  <model-viewer
+    src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
+    alt="3D-Modell Astronaut"
+    auto-rotate
+    camera-controls
+    ar
+    ar-modes="scene-viewer webxr quick-look"
+    ar-placement="floor"
+  >
+    <button slot="ar-button" id="ar-button">
+      In deinem Raum ansehen
+    </button>
+  </model-viewer>
+</div>
 
 <script>
   const modelViewer = document.querySelector('model-viewer');
