--- a/index.html
+++ b/index.html
@@ -7,21 +7,20 @@
   <style>
     body {
       margin: 0;
-      overflow: hidden; /* Verhindert das Scrollen der Seite */
+      overflow: hidden;
     }
 
     model-viewer {
-      width: 90vw; /* Modell wird auf 90% der Bildschirmbreite verkleinert */
-      height: 80vh; /* Modell wird auf 80% der Bildschirmhöhe verkleinert */
+      width: 90vw;
+      height: 80vh;
       margin: auto;
       background-color: #e0e0e0;
     }
 
-    /* Stil für den AR-Button */
     #ar-button {
       position: absolute;
       left: 50%;
-      bottom: 40px; /* Position etwas nach oben verschoben, damit der Button sichtbar ist */
+      bottom: 40px;
       transform: translateX(-50%);
       background-color: white;
       border: 2px solid #4285f4;
@@ -49,7 +48,6 @@
     #ar-button:focus {
       outline: none;
     }
-
   </style>
 </head>
 <body>
@@ -60,9 +58,11 @@
   auto-rotate
   camera-controls
   ar
-  ar-modes="scene-viewer webxr quick-look">
-  
-  <!-- AR Button, der in der Mitte erscheint -->
+  ar-modes="scene-viewer webxr quick-look"
+  environment-image="neutral"
+  exposure="1"
+  shadow-intensity="1">
+
   <button slot="ar-button" id="ar-button">
     In deinem Raum ansehen
   </button>
@@ -70,7 +70,6 @@
 </model-viewer>
 
 <script>
-  // Funktionalität des AR-Buttons sicherstellen
   const modelViewer = document.querySelector('model-viewer');
   const arButton = document.getElementById('ar-button');
   
