--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@
   camera-controls
   ar
   ar-modes="scene-viewer webxr quick-look"
-  environment-image="neutral"
-  exposure="1"
-  shadow-intensity="1">
-
+  environment-image="https://modelviewer.dev/shared-assets/environments/spruit_sunrise_1k_HDR.hdr"
+  exposure="1.3"
+  shadow-intensity="1"
+  shadow-softness="0.6">
+  
   <button slot="ar-button" id="ar-button">
     In deinem Raum ansehen
   </button>
@@ -72,7 +73,7 @@
 <script>
   const modelViewer = document.querySelector('model-viewer');
   const arButton = document.getElementById('ar-button');
-  
+
   arButton.addEventListener('click', () => {
     modelViewer.enterAR();
   });
