--- a/index.html
+++ b/index.html
@@ -7,20 +7,21 @@
   <style>
     body {
       margin: 0;
-      overflow: hidden;
+      overflow: hidden; /* Verhindert das Scrollen der Seite */
     }
 
     model-viewer {
-      width: 90vw;
-      height: 80vh;
+      width: 90vw; /* Modell wird auf 90% der Bildschirmbreite verkleinert */
+      height: 80vh; /* Modell wird auf 80% der Bildschirmhöhe verkleinert */
       margin: auto;
       background-color: #e0e0e0;
     }
 
+    /* Stil für den AR-Button */
     #ar-button {
       position: absolute;
       left: 50%;
-      bottom: 40px;
+      bottom: 40px; /* Position etwas nach oben verschoben, damit der Button sichtbar ist */
       transform: translateX(-50%);
       background-color: white;
       border: 2px solid #4285f4;
@@ -48,6 +49,7 @@
     #ar-button:focus {
       outline: none;
     }
+
   </style>
 </head>
 <body>
@@ -58,12 +60,9 @@
   auto-rotate
   camera-controls
   ar
-  ar-modes="scene-viewer webxr quick-look"
-  environment-image="https://modelviewer.dev/shared-assets/environments/spruit_sunrise_1k_HDR.hdr"
-  exposure="1.3"
-  shadow-intensity="1"
-  shadow-softness="0.6">
+  ar-modes="scene-viewer webxr quick-look">
   
+  <!-- AR Button, der in der Mitte erscheint -->
   <button slot="ar-button" id="ar-button">
     In deinem Raum ansehen
   </button>
@@ -71,9 +70,10 @@
 </model-viewer>
 
 <script>
+  // Funktionalität des AR-Buttons sicherstellen
   const modelViewer = document.querySelector('model-viewer');
   const arButton = document.getElementById('ar-button');
-
+  
   arButton.addEventListener('click', () => {
     modelViewer.enterAR();
   });
