--- a/index.html
+++ b/index.html
@@ -3,50 +3,40 @@
 <head>
   <meta charset="UTF-8" />
   <title>Ausstellung MAN Stahlhaus</title>
-  <script
-    type="module"
-    src="https://unpkg.com/@google/model-viewer@3.4.1/dist/model-viewer.min.js"
-  ></script>
   <style>
     body {
       margin: 0;
-      overflow-x: hidden; /* Nur horizontales Scrollen verhindern */
+      overflow-x: hidden;
       font-family: Arial, sans-serif;
       background-color: #ffffff;
     }
-
     #header {
       text-align: center;
       padding: 20px 10px;
       background-color: #f5f5f5;
     }
-
     #logo {
       max-width: 160px;
       height: auto;
       margin-bottom: 10px;
     }
-
     #header h1 {
       margin: 10px 0 5px;
       font-size: 28px;
       color: #333;
     }
-
     #header p {
       margin: 0 0 15px;
       font-size: 16px;
       color: #555;
     }
-
     model-viewer {
       width: 90vw;
-      height: 70vh; /* Etwas kleinere Höhe, damit es gut passt */
+      height: 70vh;
       display: block;
       margin: 0 auto 40px;
       background-color: #e0e0e0;
     }
-
     #ar-button {
       position: absolute;
       left: 50%;
@@ -59,9 +49,7 @@
       font-size: 18px;
       font-weight: bold;
       color: #4285f4;
-      background-image: url(
-        "https://modelviewer.dev/shared-assets/icons/ic_view_in_ar_new_googblue_48dp.png"
-      );
+      background-image: url("https://modelviewer.dev/shared-assets/icons/ic_view_in_ar_new_googblue_48dp.png");
       background-repeat: no-repeat;
       background-position: 12px center;
       background-size: 28px 28px;
@@ -72,11 +60,9 @@
       justify-content: center;
       gap: 10px;
     }
-
     #ar-button:active {
       background-color: #e0e0e0;
     }
-
     #ar-button:focus {
       outline: none;
     }
@@ -86,10 +72,7 @@
   <div id="header">
     <img src="MANLogo.svg" alt="MAN Logo" id="logo" />
     <h1>MAN Stahlhaus</h1>
-    <p>
-      Erleben Sie unser innovatives Stahlhaus als 3D-Modell – drehen, zoomen
-      und in AR betrachten!
-    </p>
+    <p>Erleben Sie unser innovatives Stahlhaus als 3D-Modell – drehen, zoomen und in AR betrachten!</p>
   </div>
 
   <model-viewer
@@ -104,6 +87,8 @@
       In deinem Raum ansehen
     </button>
   </model-viewer>
+
+  <script type="module" src="model-viewer.min.js"></script>
 
   <script>
     const modelViewer = document.querySelector("model-viewer");
