--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
       background-color: #f5f5f5;
     }
     #logo {
-      max-width: 160px;
+      max-width: 240px;  /* größer */
       height: auto;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
     }
     #header h1 {
-      margin: 10px 0 5px;
-      font-size: 28px;
+      margin: 10px 0 10px;
+      font-size: 36px;   /* größer */
       color: #333;
     }
     #header p {
-      margin: 0 0 15px;
-      font-size: 16px;
+      margin: 0 0 25px;
+      font-size: 20px;   /* größer */
       color: #555;
     }
     model-viewer {
@@ -72,7 +72,8 @@
   <div id="header">
     <img src="MANLogo.svg" alt="MAN Logo" id="logo" />
     <h1>MAN Stahlhaus</h1>
-    <p>Erleben Sie unser innovatives Stahlhaus als 3D-Modell – drehen, zoomen und in AR betrachten!</p>
+    <p>Besucht uns in der Barfüßerstraße & taucht in die Geschichte der vergessenen MAN-Stahlhäusern ein!
+    Wann: 10.07.25 - 27.07.25</p>
   </div>
 
   <model-viewer
