--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <title>Ausstellung MAN Stahlhaus</title>
+  <title>NIEMANDEN JUCKT´S - UNS SCHON !</title>
   <style>
     body {
       margin: 0;
@@ -19,11 +19,6 @@
       max-width: 240px;  /* größer */
       height: auto;
       margin-bottom: 20px;
-    }
-    #header h1 {
-      margin: 10px 0 10px;
-      font-size: 36px;   /* größer */
-      color: #333;
     }
     #header p {
       margin: 0 0 25px;
@@ -71,9 +66,12 @@
 <body>
   <div id="header">
     <img src="MANLogo.svg" alt="MAN Logo" id="logo" />
-    <h1>MAN Stahlhaus</h1>
-    <p>Besucht uns in der Barfüßerstraße & taucht in die Geschichte der vergessenen MAN-Stahlhäusern ein!
-    Wann: 10.07.25 - 27.07.25</p>
+    <p>Besucht uns in der Barfüßerstraße & taucht in die Geschichte
+      der vergessenen MAN-Stahlhäusern ein!
+      
+      Wann: 10.07.25 - 27.07.25
+    
+      Erleben Sie das MAN-Stahlhaus als 3D Modell in Augmented Reality:</p>
   </div>
 
   <model-viewer
