--- a/index.html
+++ b/index.html
@@ -66,12 +66,10 @@
 <body>
   <div id="header">
     <img src="MANLogo.svg" alt="MAN Logo" id="logo" />
-    <p>Besucht uns in der Barfüßerstraße & taucht in die Geschichte
-      der vergessenen MAN-Stahlhäusern ein!
-      
-      Wann: 10.07.25 - 27.07.25
-    
-      Erleben Sie das MAN-Stahlhaus als 3D Modell in Augmented Reality:</p>
+    <p>Besucht uns in der Barfüßerstraße & taucht in die Geschichte der vergessenen MAN-Stahlhäusern ein!</p>
+  <p>Wann: 10.07.25 - 27.07.25</p>
+    <p></p>
+  <p>Erleben Sie das MAN-Stahlhaus als 3D Modell in Augmented Reality:</p>
   </div>
 
   <model-viewer
